--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.9.3",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
