--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "seed": "node src/seed.js",
+    "seed": "node src/seed-all.js",
+    "seed:reset": "node src/seed.js",
     "seed-mongodb-ai": "node src/seed-mongodb-ai.js",
     "seed-hierarchy": "node src/seeds/topics/seed-mongodb-topic.js",
     "seed-express": "node src/seeds/topics/seed-express-topic.js",
