--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "seed-express": "node src/seeds/topics/seed-express-topic.js",
     "seed-nodejs": "node src/seeds/topics/seed-nodejs-topic.js",
     "seed-react": "node src/seeds/topics/seed-react-topic.js",
-    "seed-javascript": "node src/seeds/topics/seed-javascript-topic.js",
+    "seed-javascript": "node src/seeds/hierarchy/seed-javascript-hierarchy.js",
     "seed:all": "node src/seed-all.js"
   },
   "keywords": [
@@ -31,18 +31,25 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "envalid": "^8.1.1",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "google-auth-library": "^10.5.0",
     "groq-sdk": "^0.8.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.9.3",
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
-    "slugify": "^1.6.6"
+    "opossum": "^9.0.0",
+    "rate-limiter-flexible": "^9.0.1",
+    "slugify": "^1.6.6",
+    "winston": "^3.19.0",
+    "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
