--- a/code-runner/package.json
+++ b/code-runner/package.json
@@ -13,7 +13,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
-    "supertest": "^6.4.4"
+    "jest": "^29.6.1"
   }
 }
