--- a/ws-server/package.json
+++ b/ws-server/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "@socket.io/redis-adapter": "^8.0.0",
+    "ioredis": "^5.3.2"
   }
 }
