--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "opossum": "^9.0.0",
     "rate-limiter-flexible": "^9.0.1",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.3",
     "winston": "^3.19.0",
     "winston-mongodb": "^7.0.1"
   },
