--- a/ws-server/package.json
+++ b/ws-server/package.json
@@ -5,12 +5,18 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "test": "node -e \"console.log('no tests')\""
+    "test": "jest --runInBand --colors"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "@socket.io/redis-adapter": "^8.0.0",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
+    "socket.io-client": "^4.7.2",
+    "node-fetch": "^3.3.1",
+    "jest": "^29.6.1"
   }
 }
