test(code-runner): add Redis integration test; ci: add Redis-backed job to workflow

--- a/.github/workflows/feature-stubs-ci.yml
+++ b/.github/workflows/feature-stubs-ci.yml
@@ -38,3 +38,33 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+
+  # Redis-backed integration job - exercises BullMQ path when REDIS_URL is set
+  code-runner-redis:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend/code-runner
+    services:
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      REDIS_URL: redis://localhost:6379
+      DISABLE_DOCKER: '1'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install
+        run: npm ci
+      - name: Run Redis-backed tests
+        run: npm test
