ci(yjs): add yjs-server job and backend Yjs server stub tests

--- a/.github/workflows/feature-stubs-ci.yml
+++ b/.github/workflows/feature-stubs-ci.yml
@@ -68,3 +68,19 @@ jobs:
         run: npm ci
       - name: Run Redis-backed tests
         run: npm test
+
+  yjs-server:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend/yjs-server
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install
+        run: npm ci
+      - name: Run tests
+        run: npm test
